--- a/TwoActivities/build.gradle
+++ b/TwoActivities/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-//        jcenter()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
@@ -20,7 +20,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-//        jcenter()
+        jcenter()
     }
 }
 
